--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@ body {
     color: #2D3440;
 }
 
+
 .main-container {
     flex-grow: 1;
 }
@@ -258,6 +259,7 @@ body {
     min-width: 16px;
     min-height: 16px;
     font-size: 14px;
+    position: relative;
 }
 
 .phone {
@@ -347,9 +349,9 @@ body {
     border-radius: 30px;
 }
 
-/*.popover {
+.popover {
     display: none;
-}*/
+}
 
 .popover-catalog {
     width: 106px;
@@ -438,14 +440,192 @@ body {
     position: absolute;
     padding-top: 48px;
     padding-left: 48px;
+    padding-right: 48px;
     background: #FCFCFC;
     border-radius: 4px;
-    top: 5px;
-    left: 0;
+    top: 40px;
+    right: 0;
     z-index: 1;
-    width: 441px;
+    width: 346px;
+}
+.popover-title-cart {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: start;
+    margin-top: 0;
+    margin-bottom: 32px;
 }
 
+.popover-cart-empty {
+    position: absolute;
+    background-color: #FCFCFC;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    width: 288px;
+    min-height: 60px;
+    top: 40px;
+    right: 0;
+    z-index: 1;
+    border-radius: 4px;
+}
+
+.popover-cart-empty-text {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.popover-cart-list {
+    display: grid;
+    grid-template-columns: 346px;
+    row-gap: 24px;
+    padding: 0;
+    margin: 0;
+}
+
+.popover-cart-item {
+    display: flex; 
+    margin: 0; 
+    padding: 0;
+}
+
+.popover-cart-image {
+    margin-right: 16px;
+}
+
+.popover-cart-discription {
+    display: flex;
+    min-width: 81px;
+    flex-direction: column;
+    justify-content: start;
+    margin: 0;
+    padding: 0;
+    margin-right: 83px;
+}
+
+.popover-cart-product {
+    text-align: start;
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.popover-cart-product-price {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: start;
+    color: #B9B9B9;
+}
+
+.popover-price {
+    margin-right: 52px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 0;
+    margin-top: 0;
+    align-self: center;
+}
+
+.popover-cart-close-button {
+    width: 16px;
+    height: 16px;
+    border: none;
+    cursor: pointer;
+    background-color: #FCFCFC;
+    align-self: center;
+    padding: 0;
+}
+
+.popover-cart-footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    margin-top: 64px;
+    margin-bottom: 48px;
+}
+
+.popover-cart-footer::before {
+    content: "";
+    position: absolute;
+    border: 1px solid #E7E7E7;
+    width: 345px;
+    top: -32px;
+}
+
+.cart-summ {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #2D3440;
+    align-self: center;
+}
+
+.popover-login {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 324px;
+    background-color: #FCFCFC;
+    z-index: 1;
+    padding: 48px;
+    top: 75px;
+    right: 505px;
+    border-radius: 4px;
+}
+
+.popover-login-footer {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    margin-top: 32px;
+}
+
+.popover-login-title {
+    margin-top: 0;
+    margin-bottom: 32px;
+}
+
+
+.login-field {
+    margin-bottom: 16px;
+}
+
+.login-field,
+.password-field {
+    width: 290px;
+}
+
+.login-button {
+    margin-right: 23px;
+    cursor: pointer;
+}
+
+
+.popover-login-forget-password {
+    margin-bottom: 4px;
+    color: #2D3440;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.popover-login-registration {
+    color: #2D3440;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.popover {
+    display: none;
+}
 
 /*Слайдеры*/
 
@@ -1973,3 +2153,131 @@ body {
     outline: none;
     padding: 1px 7px;
 }
+
+.modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .modal {
+    position: relative;
+    margin: auto;
+    background-color: #ffffff;
+  }
+
+
+.modal-content {
+    padding-top: 64px;
+    padding-left: 64px;
+    padding-right: 64px;
+}
+  
+.modal-close-button {
+    position: absolute;
+    padding: 0;
+    top: 0;
+    right: 0;
+    width: 56px;
+    height: 44px;
+    background-color: #ffffff;
+    border: none;
+    background-image: url("../image/icons/cross.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+  } 
+
+  .modal-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    margin-top: 0;
+    margin-bottom: 32px;
+  }
+
+  .modal-form {
+      display: grid;
+      grid-template-columns: 442px;
+      margin-bottom: 32px;
+  }
+
+  .modal-flield-email {
+      margin-top: 16px;
+      margin-bottom: 16px;
+  }
+
+  .modal-feedback-flield {
+      width: 407px;
+      height: 92px;
+  }
+
+  .modal-button {
+      margin-bottom: 66px;
+      margin-left: 390px;
+  }
+
+  .modal-container-close {
+      display: none;
+  }
+
+  .tooltip {
+    position: absolute;
+    margin-top: 4px;
+    margin-left: 2px;
+    width: 16px;
+    height: 16px;
+  }
+
+  .tooltip-toggle {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    display: block;
+}
+
+.tooltip-icon {
+    color: #242424;
+    display: block;
+  }
+
+.tooltip-text {
+    display: block;
+    background: #FCFCFC;
+    box-shadow: 0px 2px 12px rgba(173, 152, 143, 0.18);
+    border-radius: 1px;
+    width: 162px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    position: absolute;
+    bottom: 100%;
+    margin-bottom: 6px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.tooltip-text:after {
+    content:'';
+    background-image: url("../image/icons/info_tail.svg");
+    width: 14px;
+    height: 6px;
+    position:absolute;
+    transform: rotate(180deg);
+    top: 100%;
+    left:0;
+    right:0;
+    margin-left: auto;
+    margin-right: auto;
+  }
